# plex-rclone-manager

./: .gitignore  README.md  pyproject.toml
.github/workflows/: push.yml
pecho/: __init__.py
prm/: __main__.py  cli.py  config.py
