[tool.poetry]
name = "plex-rclone-manager"
version = "0.1.0"
description = ""
authors = ["Nihaal Sangha <me@niha.al>"]
license = "MIT"
packages = [
    { include = "prm" }
]
[tool.poetry.scripts]
prm = "prm.cli:cli"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
toml = "^0.10.1"
pyyaml = "^5.3.1"
pecho = "^0.5.0"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
black = "^19.10b0"

[tool.black]
line-length = 120
target-version = ['py36']
skip-string-normalization = true
include = '\.pyi?$'

[tool.isort]
line_length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
